views/admin/css/exhibits.css
/* ... */
.layout-select {
    border: 1px dashed #D6D5C2;
    border-top-style: solid;
    padding: 0 10px 1em 10px;
    margin-top: -1px;
    background-color: rgba(255,255,255,.55);
}

.layout-thumbs {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.layout-thumbs .add-link {
    margin-top: 20px;
}

.layout {
    width: 31%;
    display: inline-block;
    overflow: auto;
    cursor: pointer;
    background-color: #fff;
    padding: 5px;
    box-shadow: 0 0 3px #ccc;
    margin: 0 1% 2%;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    border: 2px solid #fff;
}

@media screen and (max-width: 480px) {
    .layout {
        width: 48%;
    }
}

.layout img {
    border: 1px solid #e7e7e7;
    float: left;
    margin-bottom: 5px;
    width: 100%;
    height: auto;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

.layout.selected {
    border: 2px solid #D6D5C2;
}

.selected {
    background-color: #F3F3E7;
}

.layout input[type="radio"] {
    display: none;
}

.add-block .layout-name {
    font-size: 14px;
    line-height: 20px;
    clear: both;
    display: block;
}

.delete-element {
    clear: none;
}

.selected-item-list:empty + .add-item a {
    margin-bottom: 0;
}

.cover-image-form-elements,
.selected-item-list .attachment, .selected-item-list .ui-sortable-highlight, .add-item {
    width: 100px;
    display: inline-block;
    height: 124px;
    color: #fff;
    padding: 10px;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    line-height: 24px;
    font-size: 14px;
    position: relative;
    vertical-align: top;
    margin: 0 10px 10px 0;
}

.cover-image-form-elements {
    height: auto;
}

.selected-item-list .attachment {
    background-color: #e5e5e5;
    color: #232323;
    cursor: move;
    display: inline-flex;
    justify-content: space-between;
    flex-direction: column;
    padding: 10px 10px 0;
}

.selected-item-list .attachment h5 {
    z-index: 51;
}

.selected-item-list .attachment-body {
    margin-bottom: auto;
}

.cover-image-form-elements {
	padding: 25px;
    background-color: white;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    width: 100%;
    text-align: center;
}

#first-time-cover-image {
    margin-bottom: 0;
}

.cover-image-form-elements .explanation {
    width: 100%;
    text-align: center;
}

.cover-image-form-elements.attached .explanation {
    display: none;
}

.cover-image-form-elements.attached.deleted .explanation {
    display: block;
    color: #4C3939;
    margin: 0 0 20px;
    position: relative;
    z-index: 100;
}

.cover-image-form-elements h5,
.selected-item-list .attachment h5 {
    margin: 0;
    line-height: 20px;
    font-size: 14px;
    overflow: hidden;
    position: relative;
    max-height: 80px;
}

.selected-item-list .attachment h5 a {
    color: #fff;
}

.cover-image-form-elements .cover-image-background,
.selected-item-list .attachment-background {
    height: 100px;
    opacity: 0.2;
    float: left;
}

.cover-image-form-elements .cover-image-background {
    width: 100px;
    margin: 0 10px 0 0;
    opacity: 1;
}

.cover-image-form-elements .undo-delete,
.cover-image-form-elements .deleted .delete-element,
.attachment .deleted .delete-element, 
.attachment .undo-delete {
    display: none;
}

.attachment .deleted .undo-delete,
.cover-image-form-elements .deleted .undo-delete {
    display: block;
}

.cover-image-form-elements .delete-element,
.cover-image-form-elements .undo-delete,
.attachment .delete-element,
.attachment .undo-delete {
    position: absolute;
    top: 0;
    right: 0;
    width: 16px;
    height: 16px;
    background-color: transparent;
    cursor: pointer;
    padding: 0;
    border: 0;
    z-index: 51;
}

.cover-image-form-elements .delete-element:after,
.cover-image-form-elements .undo-delete:after,
.attachment .undo-delete:after,
.attachment .delete-element:after {
    content: "\f00d" / "";
    font-family: "Font Awesome 5 Free";
    font-weight: 900;
    text-indent: 0;
    text-align: center;
    font-size: 12px;
    box-sizing: border-box;
    line-height: 16px;
}

.cover-image-form-elements .undo-delete:after,
.attachment .undo-delete:after {
    content: "\f0e2" / "";
    color: #4C3939;
}

.cover-image-form-elements .deleted:after,
.attachment .deleted:after {
    z-index: 50;
}

.edit-cover-image.button {
    margin-bottom: 0;
}

.edit-attachment {
    background-color: rgba(0,0,0,.03);
    margin: 0 -10px;
    padding: 0 10px;
}

.attachment-background {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}

.add-item {
    border: 1px dashed #D6D5C2;
    color: #232323;
    font-weight: bold;
    text-align: center;
    cursor: pointer;
    padding: 0;
    float: none; /* Override core responsive .add-item style */
}

.add-item:before {
    content: "+";
    display: block;
    font-size: 100px;
    line-height: 75px;
    color: #8a8a8a;
}

.block-form .layout-options {
    position: relative;
    padding: 0;
}

.layout-options h4 {
    box-sizing: border-box;
    margin: 0;
    float: left;
}

.layout-options *:last-child {
    margin-bottom: 0;
}

.layout-options label {
    font-weight: normal;
    display: inline-block;
    width: 30%;
    margin-bottom: 0;
}

@media screen and (max-width: 480px) {
    .layout-options label {
        width: 100%;
        margin-bottom: .5rem;
    }
}

.layout-options > div {
    display: none;
    border-bottom: 1px solid #D6D5C2;
    padding: 10px;
}

.layout-options > .block-header {
    display: block;
    padding: 10px;
    overflow: auto;
    line-height: 1.5em;
}

.layout-options > .block-header ~ div.opened {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
}

.attachment-header.deleted > * {
    z-index: 51;
}
/* ... */

